vlib/v/checker/tests/cast_void.out
vlib/v/checker/tests/cast_void.vv:1:8: error: type `void` cannot be casted
    1 | num := int(print(''))
      |        ~~~~~~~~~~~~~~
    2 | println(num)
